Fix button alignment on source_images page
Former-commit-id: 0510691cb205f4532cd15828c5fe4f38ae95fe29

--- a/static/BookReaderDemo/BookReaderDemo.css
+++ b/static/BookReaderDemo/BookReaderDemo.css
@@ -2,6 +2,14 @@
  * Custom overrides for BookReader Demo.
  */
 
+ * {
+   -webkit-box-sizing: unset;
+   -moz-box-sizing: unset;
+   box-sizing: unset;
+ }
+
+
+
 /* Hide print and embed functionality */
 #BRtoolbar .embed, .print {
     display: none;
